# ttc2ttf

./: CMakeLists.txt  README.md  tchar.h  ttc2ttf.cpp  ttc2ttf.h
